# final_thesis

./: .gitignore  CMakeLists.txt  README.md
data/: obj_to_ply.py
data/groundtruth/: 1powerline_lines.ply  2powerlines_lines.ply  4powerlines_lines.ply  pylon1_lines.ply  pylon2_lines.ply  pylon3_lines.ply  pylon4_lines.ply  pylon5_lines.ply  pylon6_lines.ply  pylon7_lines.ply  pylon8_lines.ply  pylon9_lines.ply
data/pointclouds/: 1powerline_pt.ply  2powerlines_pt.ply  4powerlines_pt.ply  pylon1_pt.ply  pylon2_pt.ply  pylon3_pt.ply  pylon4_pt.ply  pylon5_pt.ply  pylon6_pt.ply  pylon7_pt.ply  pylon8_pt.ply  pylon9_pt.ply
data/rhinoFiles/: 1powerline.3dm  2powerlines.3dm  4powerlines.3dm  pylon1.3dm  pylon2.3dm  pylon3.3dm  pylon4.3dm  pylon5.3dm  pylon6.3dm  pylon7.3dm  pylon8.3dm  pylon9.3dm
hough_3d_line/: .gitignore  Makefile  convert_dat_to_ply.py  convert_ply_to_txt.py  convert_txt_to_ply.py  hough3dlines.cpp
hough_3d_line/input/: 1powerline_pt.txt  4powerlines_pt.txt  pylon1_pt.txt
hough_3d_line/originFiles/: hough3dlines_copy.cpp
hough_3d_line/output/: pylon1_leftovers.ply
lib/Release/: 3rd_glfw.lib  3rd_glutess.lib  3rd_imgui.lib  3rd_kdtree.lib  3rd_opcode.lib  3rd_poisson.lib  3rd_polypartition.lib  3rd_ransac.lib  3rd_rply.lib  3rd_tetgen.lib  3rd_triangle.lib  easy3d_algo.exp  easy3d_algo.lib  easy3d_core.exp  easy3d_core.lib  easy3d_fileio.exp  easy3d_fileio.lib  easy3d_gui.exp  easy3d_gui.lib  easy3d_kdtree.exp  easy3d_kdtree.lib  easy3d_renderer.exp  easy3d_renderer.lib  easy3d_util.exp  easy3d_util.lib  easy3d_viewer.exp  easy3d_viewer.lib  efficientRansac.lib  energyMinimization.lib  gco.lib  graph.lib  myRansac.lib  ransac.lib  regionGrowing.lib
output/1powerline/: gco_preserved_20250609_113554.ply  gco_removed_20250609_113554.ply  ht_1powerline.ply  ht_1powerline_leftovers.ply  ransac3d2d_leftoverPointsForLine_20250609_192453.ply  ransac3d2d_leftoverPointsForPlane_20250609_192453.ply  ransac3d2d_lines_20250609_192453.ply  ransac3d_cylinderInfos_20250609_113346.csv  ransac3d_leftoverPoints_20250609_113346.ply  ransac3d_lines3d_20250609_113346.ply  rg_cylinderInfos_20250609_113410.csv  rg_lines3d_20250609_113410.ply  rg_unassignedPoints_20250609_113410.ply
output/4powerlines/: gco_preserved_20250609_113802.ply  gco_removed_20250609_113802.ply  ht_4powerlines.ply  ht_4powerlines_leftovers.ply  ransac3d2d_leftoverPointsForLine_20250609_191805.ply  ransac3d2d_leftoverPoints_20250609_191805.ply  ransac3d2d_lines_20250609_191805.ply  ransac3d_cylinderInfos_20250609_113712.csv  ransac3d_leftoverPoints_20250609_113712.ply  ransac3d_lines3d_20250609_113712.ply  rg_cylinderInfos_20250609_113731.csv  rg_lines3d_20250609_113731.ply  rg_unassignedPoints_20250609_113731.ply
output/pylon1/: gco_preserved_20250609_114025.ply  gco_removed_20250609_114025.ply  ht_pylon1.ply  ransac3d2d_leftoverPointsForLine_20250609_191935.ply  ransac3d2d_leftoverPoints_20250609_191935.ply  ransac3d2d_lines_20250609_191935.ply  ransac3d_cylinderInfos_20250609_113855.csv  ransac3d_leftoverPoints_20250609_113855.ply  ransac3d_lines3d_20250609_113855.ply  rg_cylinderInfos_20250609_113942.csv  rg_lines3d_20250609_113942.ply  rg_unassignedPoints_20250609_113942.ply
src/: CMakeLists.txt  analysis.cpp  analysis.h  cgalDefines.h  cgal_definitions.h  functions.cpp  functions.h  logging_config.h  main.cpp  main_analysis.cpp  main_gui.cpp  main_paramSearch.cpp  viewer_gui.cpp  viewer_gui.h
src/energyMinimization/: CMakeLists.txt  energyMinimization.cpp  energyMinimization.h
src/graph/: CMakeLists.txt  graph.cpp  graph.h
src/myRansac/: CMakeLists.txt  CustomCylinderConstructor.cpp  CustomCylinderConstructor.h  ransac3d.cpp  ransac3d.h
src/ransac/: CMakeLists.txt  CustomCylinderConstructor.cpp  CustomCylinderConstructor.h  CustomCylinderRANSAC.cpp  CustomCylinderRANSAC.h  cgalDefines_ransac.h  customCylinder.h  ransac.h  ransac3d.cpp  ransac3d.h  ransac3d2d.cpp  ransac3d2d.h
src/regionGrowing/: CMakeLists.txt  cgalDefines_rg.h  regionGrowing.cpp  regionGrowing.h
