cmake_minimum_required(VERSION 3.15)
project(Thesis VERSION 1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)
set(CMAKE_BUILD_TYPE Release)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/lib)

set(Thesis_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
set(Thesis_SRC_DIR ${Thesis_ROOT}/src)
set(Thesis_EXTERNAL_DIR ${Thesis_ROOT}/3rd_party)

add_subdirectory(3rd_party)
add_subdirectory(src)
